--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Inicio</a></li>
+              <li><a href="#/">Inicio</a></li>
               <li><a href="#/listado">Listado</a></li>
             </ul>
           </div>
@@ -48,7 +48,7 @@
     </div>
 
     <div class="container">
-      <div ng-view ></div>
+      <div ng-view></div>
     </div>
 
     <div class="footer">
