se crea factory de listado

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <script src="scripts/services/appscriptservice.js"></script>
         <script src="scripts/services/menufactory.js"></script>
         <script src="scripts/controllers/listado.js"></script>
+        <script src="scripts/services/listadofactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
