--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
+    <script src="bower_components/angular-i18n/angular-locale_es-cl.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
