--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,6 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <base href="/">
     <title>Demo AngularJS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
@@ -40,8 +39,8 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="/">Inicio</a></li>
-              <li><a href="/listado">Listado</a></li>
+              <li><a href="#/">Inicio</a></li>
+              <li><a href="#/listado">Listado</a></li>
             </ul>
           </div>
         </div>
