se agrego filtros y directiva de tabla

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/controllers/listado.js"></script>
         <script src="scripts/services/listadofactory.js"></script>
         <script src="scripts/controllers/listadonuevomodal.js"></script>
+        <script src="scripts/directives/tablalistado.js"></script>
         <!-- endbuild -->
 </body>
 </html>
